<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_img">

    <ImageView
        android:id="@+id/cityImageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="centerCrop"
        android:layout_margin="30dp"
        android:contentDescription="@string/city_card_image"/>

    <!--  City Name  -->
    <TextView
        android:id="@+id/cityNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:textAllCaps="true"
        android:text="@string/city_name" />

    <TextView
        android:id="@+id/cityNameValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_marginStart="30dp"
        android:text="@string/lorem_ipsum" />

    <!--  Language  -->
    <TextView
        android:id="@+id/spokenLanguageLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="12dp"
        android:layout_marginStart="30dp"
        android:textAllCaps="true"
        android:text="@string/spoken_language" />

    <TextView
        android:id="@+id/spokenLanguageValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_marginStart="30dp"
        android:text="@string/lorem_ipsum" />

    <!--  Population  -->
    <TextView
        android:id="@+id/populationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="12dp"
        android:layout_marginStart="30dp"
        android:textAllCaps="true"
        android:text="@string/population" />

    <TextView
        android:id="@+id/populationValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_marginStart="30dp"
        android:text="@string/lorem_ipsum" />

    <!--  Famous Dish  -->
    <TextView
        android:id="@+id/dishLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="12dp"
        android:layout_marginStart="30dp"
        android:textAllCaps="true"
        android:text="@string/famous_dish" />

    <TextView
        android:id="@+id/dishValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_marginStart="30dp"
        android:text="@string/lorem_ipsum" />

</LinearLayout>