<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp" >

    <!-- 4. https://www.geeksforgeeks.org/cardview-in-android-with-example/ -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardItem"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <ImageView
                android:id="@+id/cityCardImage"
                android:layout_width="100dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:contentDescription="@string/city_card_image"
                android:src="@drawable/city_kochi" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/cityName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:text="@string/city_name"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/continentName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="20dp"
                    android:text="@string/continent_name"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.cardview.widget.CardView>